# cryptoface

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  cla-corporate.txt  icla.txt
Modules/: FindBeeCrypt.cmake  FindBotan.cmake  FindMHASH.cmake  FindOpenSSL.cmake  Findgcrypt.cmake
cf_beecrypt/: CMakeLists.txt
cf_beecrypt/include/: beecrypt_provider.h
cf_beecrypt/src/: beecrypt_digest.c  beecrypt_provider.c
cf_botan/: CMakeLists.txt
cf_botan/include/: botan_digest.h
cf_botan/src/: botan_digest.cpp
cf_buckets/: CMakeLists.txt
cf_buckets/include/: cf_bucket.h  cf_bucket_internal.h  cf_bucket_manager.h  cf_bucket_manager_internal.h  cf_memory_bucket.h
cf_buckets/src/: cf_bucket.c  cf_bucket_manager.c  cf_memory_bucket.c
cf_cryptopp/: CMakeLists.txt
cf_cryptopp/include/: cryptopp_provider.h
cf_gcrypt/: CMakeLists.txt
cf_gcrypt/include/: gcrypt_digest.h  gcrypt_provider.h
cf_gcrypt/src/: gcrypt_digest.c  gcrypt_provider.c
cf_mhash/: CMakeLists.txt
cf_mhash/include/: mhash_digest.h  mhash_provider.h
cf_mhash/src/: mhash_digest.c  mhash_provider.c
cf_nettle/: CMakeLists.txt
cf_nettle/include/: nettle_digest.h  nettle_provider.h
cf_nettle/src/: nettle_digest.c  nettle_provider.c
cf_openssl/: CMakeLists.txt
cf_openssl/include/: openssl_digest.h  openssl_provider.h
cf_openssl/src/: openssl_digest.c  openssl_provider.c
cf_test/: CMakeLists.txt
cf_test/src/: cf_test.c
cf_tomcrypt/: CMakeLists.txt
cf_tomcrypt/include/: tomcrypt_digest.h  tomcrypt_provider.h
cf_tomcrypt/src/: tomcrypt_digest.c  tomcrypt_provider.c
cryptoface/: CMakeLists.txt
cryptoface/include/: cryptoface.h  cryptoface_impl.h  digest.h  digest_impl.h  module_loader.h  provider.h
cryptoface/src/: digest.c  module_loader.c  provider.c
docs/: BUCKETS.md  uml.java
luacf/: CMakeLists.txt
luacf/include/: luacf.h
luacf/src/: luacf.c
plugins/cf_beecrypt/: CMakeLists.txt
plugins/cf_beecrypt/include/: beecrypt_digest.h
plugins/cf_botan/: CMakeLists.txt
plugins/cf_botan/include/: botan_provider.h
plugins/cf_botan/src/: botan_digest.cpp  botan_provider.cpp
plugins/cf_cryptopp/: CMakeLists.txt
plugins/cf_cryptopp/include/: cryptopp_digest.h
plugins/cf_cryptopp/src/: cryptopp_digest.cpp  cryptopp_provider.cpp  digest_list.h
plugins/cf_gcrypt/: CMakeLists.txt
plugins/cf_gcrypt/include/: gcrypt_digest.h
plugins/cf_mhash/: CMakeLists.txt
plugins/cf_mhash/include/: mhash_digest.h  mhash_provider.h
plugins/cf_nettle/: CMakeLists.txt
plugins/cf_nettle/src/: digest_list.h
plugins/cf_openssl/: CMakeLists.txt
plugins/cf_openssl/src/: openssl_digest.c
plugins/cf_tomcrypt/: CMakeLists.txt
plugins/cf_tomcrypt/src/: tomcrypt_digest.c
