cmake_minimum_required(VERSION 2.6)
project(cryptoface C)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Modules)

include(CMakeDependentOption)

find_package(OpenSSL QUIET)
find_package(MHASH QUIET)
find_package(TomCrypt QUIET)
find_package(Lua51 QUIET)

CMAKE_DEPENDENT_OPTION(BUILD_CF_MHASH "Build cf_mhash interface module" ON "MHASH_LIBRARIES" OFF)
CMAKE_DEPENDENT_OPTION(BUILD_CF_TOMCRYPT "Build cf_tomcrypt interface module" ON "TOMCRYPT_LIBRARIES" OFF)
CMAKE_DEPENDENT_OPTION(BUILD_CF_OPENSSL "Build cf_openssl interface module" ON "OPENSSL_LIBRARIES" OFF)
CMAKE_DEPENDENT_OPTION(BUILD_LUACF "Build Lua CF client" ON "LUA_INCLUDE_DIR" OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)

IF(NOT WIN32)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
ENDIF(NOT WIN32)

ADD_SUBDIRECTORY(cryptoface)
IF(BUILD_CF_MHASH)
	ADD_SUBDIRECTORY(cf_mhash)
ENDIF(BUILD_CF_MHASH)

IF(BUILD_CF_TOMCRYPT)
	ADD_SUBDIRECTORY(cf_tomcrypt)
ENDIF(BUILD_CF_TOMCRYPT)

IF(BUILD_CF_OPENSSL)
	ADD_SUBDIRECTORY(cf_openssl)
ENDIF(BUILD_CF_OPENSSL)
IF(BUILD_LUACF)
	ADD_SUBDIRECTORY(luacf)
ENDIF(BUILD_LUACF)
ADD_SUBDIRECTORY(cf_test)
